--- a/.github/workflows/deploy_workflow.yml
+++ b/.github/workflows/deploy_workflow.yml
@@ -23,7 +23,7 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: fastapiregistryjn.azurecr.io/samples/fast_image:latest
+        tags: fastapiregistryjn.azurecr.io/builds/fast_image:${{ github.sha }}
         file: ./Dockerfile
   
   deploy:
