--- a/.github/workflows/deploy_workflow.yml
+++ b/.github/workflows/deploy_workflow.yml
@@ -11,32 +11,24 @@ jobs:
     runs-on: 'ubuntu-latest'
 
     steps:
-    - uses: actions/checkout@v1
-
-    - name: Setup Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.10'
-
-    - name: Run Python unit tests
-      run: 
-        pip install unittest
-        python3 -u -m unittest test_predict.py
 
     - name: Log in to registry
-      uses: docker/login-action@v3
+      uses: docker/login-action@v1
       with:
         registry: https://fastapiregistryjn.azurecr.io/
         username: ${{ secrets.AZURE_CONTAINER_CLIENT_ID }}
         password: ${{ secrets.AZURE_CONTAINER_CLIENT_SECRET }}
 
     - name: Build and push container image to registry
-      uses: docker/build-push-action@v4
+      uses: docker/build-push-action@v2
       with:
         push: true
         tags: fastapiregistryjn.azurecr.io/builds/fast_image:${{ github.sha }}
         file: ./Dockerfile
   
+    - name: Run unit test
+      run: python3 -u -m unittest test_predict.py
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
